==> 15238972953/Electronics-Design-Contest-2021/代码/从车/HARDWARE/NRF24L01/nrf24l01.c <==
#include "NRF24L01.h"
#include "spi3.h"
#include "key.h"
#include "oled.h"
#include "delay.h"
#define NRF_BYTE0(dwTemp)       (*(char *)(&dwTemp))
#define NRF_BYTE1(dwTemp)       (*((char *)(&dwTemp) + 1))
#define NRF_BYTE2(dwTemp)       (*((char *)(&dwTemp) + 2))
#define NRF_BYTE3(dwTemp)       (*((char *)(&dwTemp) + 3))

void NRF24L01_Init(void)
{
	u8 key;
	NRF24L01_IO_Init();
	NRF_SPI3_Init();
//	while(1)
		NRF24L01_Check();
	while(NRF24L01_Check())
	{
		OLED_ShowString(0,0,(void *)"NRF24L01 Error!",12);
		OLED_ShowString(0,20,(void *)"Press Back to Break!",12);
		OLED_Refresh_Gram();
		key=KEY_Scan(0);
		if(key==1)	break;
	}
	delay_ms(200);
	OLED_Clear();
	OLED_Refresh_Gram();
}

u8 NRF24L01_Write_Reg(u8 reg,u8 value)
{
	u8 status;	
	NRF24L01_CSN=0;                 //使能SPI传输
	status =NRF_SPI3_ReadWriteByte(reg);//发送寄存器号 
	NRF_SPI3_ReadWriteByte(value);      //写入寄存器的值
	NRF24L01_CSN=1;                 //禁止SPI传输	   
	return(status);       			//返回状态值
}

u8 NRF24L01_Read_Reg(u8 reg)
{
	u8 reg_val;	    
	NRF24L01_CSN = 0;          //使能SPI传输		
	NRF_SPI3_ReadWriteByte(reg);   //发送寄存器号
	reg_val=NRF_SPI3_ReadWriteByte(0xff);//读取寄存器内容
	NRF24L01_CSN = 1;          //禁止SPI传输		    
	return(reg_val);           //返回状态值
}

u8 NRF24L01_Read_Buf(u8 reg,u8 *pBuf,u8 len)
{
	u8 status,u8_ctr;	       
	NRF24L01_CSN = 0;//使能SPI传输
	status=NRF_SPI3_ReadWriteByte(reg);//发送寄存器值(位置),并读取状态值   	   
	for(u8_ctr=0;u8_ctr<len;u8_ctr++)pBuf[u8_ctr]=NRF_SPI3_ReadWriteByte(0xff);//读出数据
	NRF24L01_CSN=1;//关闭SPI传输
	return status;//返回读到的状态值
}

u8 NRF24L01_Write_Buf(u8 reg, u8 *pBuf, u8 len)
{
	u8 status,u8_ctr;	    
	NRF24L01_CSN = 0;//使能SPI传输
	status = NRF_SPI3_ReadWriteByte(reg);//发送寄存器值(位置),并读取状态值
	for(u8_ctr=0; u8_ctr<len; u8_ctr++)NRF_SPI3_ReadWriteByte(*pBuf++); //写入数据	 
	NRF24L01_CSN = 1; //关闭SPI传输
	return status;  //返回读到的状态值
}

u8 NRF24L01_TxPacket(u8 *txbuf)
{
	u8 sta;
	NRF_SPI3_SetSpeed(SPI_BaudRatePrescaler_8);//spi速度为10.5Mhz（24L01的最大SPI时钟为10Mhz）   
	NRF24L01_CE=0;
	NRF24L01_Write_Buf(WR_TX_PLOAD,txbuf,TX_PLOAD_WIDTH);//写数据到TX BUF  32个字节
	NRF24L01_CE=1;//启动发送	   
	while(NRF24L01_IRQ!=0);//等待发送完成
	sta=NRF24L01_Read_Reg(STATUS);  //读取状态寄存器的值	   
	NRF24L01_Write_Reg(NRF_WRITE_REG+STATUS,sta); //清除TX_DS或MAX_RT中断标志
	if(sta&MAX_TX)//达到最大重发次数
	{
		NRF24L01_Write_Reg(FLUSH_TX,0xff);//清除TX FIFO寄存器 
		return MAX_TX; 
	}
	if(sta&TX_OK)//发送完成
	{
		return TX_OK;
	}
	return 0xff;//其他原因发送失败
}

void NRF24L01_RX_Mode(void)
{
	NRF24L01_CE=0;	  
	NRF24L01_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(u8*)RX_ADDRESS,RX_ADR_WIDTH);//写RX节点地址

	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);    //使能通道0的自动应答    
	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01);//使能通道0的接收地址  	 
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_CH,40);	     //设置RF通信频率		  
	NRF24L01_Write_Reg(NRF_WRITE_REG+RX_PW_P0,RX_PLOAD_WIDTH);//选择通道0的有效数据宽度 	    
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x0f);//设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
	NRF24L01_Write_Reg(NRF_WRITE_REG+CONFIG, 0x0f);//配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式 
	NRF24L01_CE = 1; //CE为高,进入接收模式 
}

void NRF24L01_TX_Mode(void)
{
	NRF24L01_CE=0;	    
	NRF24L01_Write_Buf(NRF_WRITE_REG+TX_ADDR,(u8*)TX_ADDRESS,TX_ADR_WIDTH);//写TX节点地址 
	NRF24L01_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(u8*)RX_ADDRESS,RX_ADR_WIDTH); //设置TX节点地址,主要为了使能ACK	  

	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);     //使能通道0的自动应答    
	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01); //使能通道0的接收地址  
	NRF24L01_Write_Reg(NRF_WRITE_REG+SETUP_RETR,0x1a);//设置自动重发间隔时间:500us + 86us;最大自动重发次数:10次
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_CH,40);       //设置RF通道为40
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x0f);  //设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
	NRF24L01_Write_Reg(NRF_WRITE_REG+CONFIG,0x0e);    //配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式,开启所有中断
	NRF24L01_CE=1;//CE为高,10us后启动发送
}

void NRF24L01_Test(void)
{
	NRF24L01_Init();
	u8 key;
	u8 i=0;
	u8 tx[24]={1,2,3,4};
	u8 rx[24]={0};
	OLED_ShowString(12,0,(void *)"Test_6 24L01",12);
	OLED_ShowString(12,16,(void *)"->K1 TX",12);
	OLED_ShowString(12,32,(void *)"->K2 RX",12);
	OLED_Refresh_Gram();
	
	
	while(1)
	{
		key=KEY_Scan(0);
		if(key==KEY1_PRES)
		{
			NRF24L01_TX_Mode();
			OLED_Clear();
			OLED_ShowString(12,0,(void *)"TX MODE",12);
			OLED_ShowString(12,16,(void *)"TXING",12);
			OLED_Refresh_Gram();
			delay_ms(1000);
			OLED_Clear();
			while(1)
			{
				if(NRF24L01_TxPacket(tx)==TX_OK)
				{
					OLED_ShowString(0,0,(void *)"TX_OK",12);
					i++;
					i = i%4;
					tx[0] = i+1;
					tx[1] = i+2;
					tx[2] = i+3;
					tx[3] = i+4;
					OLED_ShowNum(0,16,tx[0],2,12);
					OLED_ShowNum(64,16,tx[1],2,12);
					OLED_ShowNum(0,32,tx[2],2,12);
					OLED_ShowNum(64,32,tx[3],2,12);
					OLED_Refresh_Gram();
					delay_ms(200);
				}
				else
				{
					OLED_Clear();
					OLED_ShowString(0,0,(void *)"TX_NO",12);
					OLED_Refresh_Gram();
					delay_ms(20);
				}

			}
		}
		
		if(key==KEY2_PRES)
		{
			NRF24L01_RX_Mode();
			OLED_Clear();
			OLED_ShowString(12,0,(void *)"RX MODE",12);
			OLED_ShowString(12,16,(void *)"RXING",12);
			OLED_Refresh_Gram();
			delay_ms(1000);
			OLED_Clear();
			while(1)
			{
				if(NRF24L01_RxPacket(rx)==0)
				{
					OLED_ShowString(12,0,(void *)"RX_OK",12);
					OLED_ShowNum(0,12,rx[0],4,12);
					OLED_ShowNum(0,24,rx[1],4,12);
					OLED_ShowNum(0,36,rx[2],4,12);
					OLED_ShowNum(0,48,rx[3],4,12);
					OLED_Refresh_Gram();
					delay_ms(100);
				}
				
		  }
		}	
	}
	
}
