==> 15238972953/Electronics-Design-Contest-2021/MSP432/432测试模板(7.28)/432测试模板/测试1/Hardware/NRF24L01/NRF24L01.c <==
#include "NRF24L01.h"
#include "SpiDrive.h"
#include "led.h"
#include "oled.h"
#include "mpu6050.h"
#include "key.h"
#include "delay.h"
#include "timer.h"

void NRF24L01_Init(void)
{
	GPIO_setAsOutputPin(NRF24L01_CE_GPIO_PORT,  NRF24L01_CE_GPIO_PIN);       //输出
	GPIO_setAsOutputPin(NRF24L01_CSN_GPIO_PORT, NRF24L01_CSN_GPIO_PIN);      //输出
	GPIO_setAsInputPin (NRF24L01_IRQ_GPIO_PORT, NRF24L01_IRQ_GPIO_PIN);      //输入
	GPIO_setOutputHighOnPin(NRF24L01_CE_GPIO_PORT,  NRF24L01_CE_GPIO_PIN);   //输出高电平
	GPIO_setOutputHighOnPin(NRF24L01_CSN_GPIO_PORT, NRF24L01_CSN_GPIO_PIN);  //输出高电平
	SPI_Drive_Init(NRF24L01_SPI_DRIVE_INIT);    		                             //初始化SPI
	NRF24L01_CE_LOW(); 																				                   //使能24L01
	NRF24L01_CSN_HIGH();																				                 //SPI片选取消	 	
}

uint8_t NRF24L01_Write_Reg(uint8_t reg,uint8_t value)
{
	uint8_t status;	
	NRF24L01_CSN_LOW();                 //使能SPI传输
	status = SPI_Rd_Wr_Byte(reg, NRF24L01_SPI_DRIVE_SELECT); //发送寄存器号 
	SPI_Rd_Wr_Byte(value,  NRF24L01_SPI_DRIVE_SELECT);        //写入寄存器的值
	NRF24L01_CSN_HIGH();                //禁止SPI传输	   
	return(status);       			        //返回状态值
}

uint8_t NRF24L01_Read_Reg(uint8_t reg)
{
	uint8_t reg_val;	    
 	NRF24L01_CSN_LOW();                   //使能SPI传输		
	SPI_Rd_Wr_Byte(reg, NRF24L01_SPI_DRIVE_SELECT);            //发送寄存器号
	reg_val=SPI_Rd_Wr_Byte(0xFF,  NRF24L01_SPI_DRIVE_SELECT);   //读取寄存器内容
	NRF24L01_CSN_HIGH();                  //禁止SPI传输		    
	return(reg_val);                      //返回
}

static uint8_t NRF24L01_Read_Buf(uint8_t reg,uint8_t *pBuf,uint8_t len)
{
	uint8_t status,uint8_t_ctr;	       
	NRF24L01_CSN_LOW();              //使能SPI传输
	status=SPI_Rd_Wr_Byte(reg, NRF24L01_SPI_DRIVE_SELECT);//发送寄存器值(位置),并读取状态值   	   
 	for(uint8_t_ctr=0;uint8_t_ctr<len;uint8_t_ctr++)pBuf[uint8_t_ctr]=SPI_Rd_Wr_Byte(0xFF,  NRF24L01_SPI_DRIVE_SELECT);//读出数据
	NRF24L01_CSN_HIGH();                //关闭SPI传输
	return status;                 //返回读到的状态值
}

static uint8_t NRF24L01_Write_Buf(uint8_t reg, uint8_t *pBuf, uint8_t len)
{
	uint8_t status,uint8_t_ctr;	    
 	NRF24L01_CSN_LOW();                                                              //使能SPI传输
	status = SPI_Rd_Wr_Byte(reg, NRF24L01_SPI_DRIVE_SELECT);                                              //发送寄存器值(位置),并读取状态值
	for(uint8_t_ctr=0; uint8_t_ctr<len; uint8_t_ctr++) SPI_Rd_Wr_Byte(*pBuf++,  NRF24L01_SPI_DRIVE_SELECT); //写入数据	 
	NRF24L01_CSN_HIGH();                                                             //关闭SPI传输
	return status;                                                                   //返回读到的状态值
}

uint8_t NRF24L01_TxPacket(uint8_t *txbuf)
{
	//发送模式
  uint8_t sta;
	NRF24L01_CE_LOW();
	NRF24L01_Write_Buf(WR_TX_PLOAD,txbuf,TX_PLOAD_WIDTH);//写数据到TX BUF  32个字节
	NRF24L01_CE_HIGH();                                  //启动发送	   
	while(NRF24L01_IRQ_RD()!=0);                         //等待发送完成
	sta=NRF24L01_Read_Reg(STATUS);                       //读取状态寄存器的值	   
	NRF24L01_Write_Reg(NRF_WRITE_REG+STATUS,sta);        //清除TX_DS或MAX_RT中断标志
	if(sta&MAX_TX)                                       //达到最大重发次数
	{
		NRF24L01_Write_Reg(FLUSH_TX,0xff);                 //清除TX FIFO寄存器 
		return MAX_TX; 
	}
	if(sta&TX_OK)                                        //发送完成
	{
		return TX_OK;
	}
	return 0xff;                                         //其他原因发送失败
}

void NRF24L01_RX_Mode(void)
{
	NRF24L01_CE_LOW();	  
	NRF24L01_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(uint8_t*)NRF24L01_RX_ADDRESS,RX_ADR_WIDTH);//写RX节点地址
	
	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);    	//使能通道0的自动应答    
	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01);	//使能通道0的接收地址  	 
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_CH,40);	    	//设置RF通信频率		  
	NRF24L01_Write_Reg(NRF_WRITE_REG+RX_PW_P0,RX_PLOAD_WIDTH);//选择通道0的有效数据宽度 	    
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x0f);	//设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
	NRF24L01_Write_Reg(NRF_WRITE_REG+CONFIG, 0x0f);		//配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式 
	NRF24L01_CE_HIGH(); //CE为高,进入接收模式 
}

void NRF24L01_TX_Mode(void)
{														 
	NRF24L01_CE_LOW();	    
	NRF24L01_Write_Buf(NRF_WRITE_REG+TX_ADDR,(uint8_t*)NRF24L01_TX_ADDRESS,TX_ADR_WIDTH);//写TX节点地址 
	NRF24L01_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(uint8_t*)NRF24L01_RX_ADDRESS,RX_ADR_WIDTH); //设置TX节点地址,主要为了使能ACK	  

	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);     //使能通道0的自动应答    
	NRF24L01_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01); //使能通道0的接收地址  
	NRF24L01_Write_Reg(NRF_WRITE_REG+SETUP_RETR,0x1a);//设置自动重发间隔时间:500us + 86us;最大自动重发次数:10次
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_CH,40);       //设置RF通道为40
	NRF24L01_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x0f);  //设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
	NRF24L01_Write_Reg(NRF_WRITE_REG+CONFIG,0x0e);    //配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式,开启所有中断
	NRF24L01_CE_HIGH();                               //CE为高,10us后启动发送
}

void NRF24L01_TEST(void)
{
	
	u8 key,mode;
	NRF24L01_Init();
	Delay_ms(100);
	while(NRF24L01_Check())
	{
		BEEP=!BEEP;
		Delay_ms(200);
	}
	OLED_Clear();
	OLED_ShowString(16,16,"key1 - RX",12);
	OLED_ShowString(16,32,"key2 - TX",12);
  OLED_Refresh_Gram();
	while(1)
	{
		key=KEY_Scan(0);
		if(key==KEY1_PRES)
		{
			mode=0;			
			break;
		}else if(key==KEY2_PRES)
		{
			mode=1;
			break;
		}		
		Delay_ms(5);	  
	}
	
	if(mode==0)//RX模式
	{
	  OLED_Clear();
 		OLED_ShowString(16,0,"mode  RX",12);
	 OLED_ShowString(0,16,"Pitch          C",12);
	 OLED_ShowString(0,32,"Roll           C",12);
	 OLED_ShowString(0,48,"Yaw            C",12);
		OLED_Refresh_Gram();
		NRF24L01_RX_Mode();
		TimerA0_Tim_Init();
		while(1);
	}
	else 
	{
	  OLED_Clear();		
		OLED_ShowString(16,16," TX",12);
		OLED_Refresh_Gram();
		NRF24L01_TX_Mode();
    while(1)
		{
			NRF24L01_Send_mpu();
		}			
	}
}
